fix: fixed registration, and added email verification
